添加测试类

--- a/pom.xml
+++ b/pom.xml
@@ -21,35 +21,68 @@
       <artifactId>spring-context</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
-
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-instrument</artifactId>
+      <artifactId>spring-aop</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-aspects</artifactId>
       <version>${spring.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-asm</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <!-- AOP begin -->
     <!--<dependency>-->
-      <!--<groupId>org.springframework</groupId>-->
-      <!--<artifactId>spring-transaction</artifactId>-->
-      <!--<version>${spring.version}</version>-->
+      <!--<groupId>org.aspectj</groupId>-->
+      <!--<artifactId>aspectjrt</artifactId>-->
+      <!--<version>1.7.4</version>-->
     <!--</dependency>-->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context-support</artifactId>
-      <version>${spring.version}</version>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>3.1</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-tx</artifactId>
-      <version>${spring.version}</version>
+      <groupId>aopalliance</groupId>
+      <artifactId>aopalliance</artifactId>
+      <version>1.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.20.0-GA</version>
+    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework</groupId>-->
+      <!--<artifactId>spring-instrument</artifactId>-->
+      <!--<version>${spring.version}</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.springframework</groupId>-->
+      <!--<artifactId>spring-aspects</artifactId>-->
+      <!--<version>${spring.version}</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+      <!--&lt;!&ndash;<groupId>org.springframework</groupId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<artifactId>spring-transaction</artifactId>&ndash;&gt;-->
+      <!--&lt;!&ndash;<version>${spring.version}</version>&ndash;&gt;-->
+    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.springframework</groupId>-->
+      <!--<artifactId>spring-context-support</artifactId>-->
+      <!--<version>${spring.version}</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.springframework</groupId>-->
+      <!--<artifactId>spring-tx</artifactId>-->
+      <!--<version>${spring.version}</version>-->
+    <!--</dependency>-->
     <!--<dependency>-->
       <!--<groupId>opensymphony</groupId>-->
       <!--<artifactId>quartz-all</artifactId>-->
@@ -60,6 +93,7 @@
       <artifactId>commons-collections</artifactId>
       <version>3.2.1</version>
     </dependency>
+
 
     <!--test lib-->
     <!--<dependency>-->
@@ -74,18 +108,4 @@
       <version>4.11</version>
     </dependency>
   </dependencies>
-
-  <build>
-    <resources>
-      <resource>
-        <directory>src/main/java</directory>
-        <includes>
-          <include>**/*.xml</include>
-        </includes>
-      </resource>
-      <!--<resource>-->
-      <!--<directory>src/main/resources</directory>-->
-      <!--</resource>-->
-    </resources>
-  </build>
 </project>
