--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,166 @@
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'maven'
+allprojects {
+    apply plugin: 'maven'
+    apply plugin: 'idea'
 
-group = 'me.spring'
-version = '1.0-SNAPSHOT'
-
-description = """spring-learn"""
-
-sourceCompatibility = 1.5
-targetCompatibility = 1.5
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
-
-
-repositories {
-     mavenLocal()
-     jcenter()
-     maven { url "http://repo.maven.apache.org/maven2" }
+    group = 'me.spring.learn'
+    version = '0.0.1-SNAPSHOT'
 }
-dependencies {
-    compile group: 'org.springframework', name: 'spring-context', version:'4.1.6.RELEASE'
-    compile group: 'org.springframework', name: 'spring-aop', version:'4.1.6.RELEASE'
-    compile group: 'org.springframework', name: 'spring-aspects', version:'4.1.6.RELEASE'
-    
-    compile group: 'cglib', name: 'cglib', version:'3.1'
-    compile group: 'aopalliance', name: 'aopalliance', version:'1.0'
-    compile group: 'org.javassist', name: 'javassist', version:'3.20.0-GA'
-    compile group: 'commons-collections', name: 'commons-collections', version:'3.2.1'
-    compile group: 'junit', name: 'junit', version:'4.11'
+
+subprojects {
+
+    ext.springVersion = "3.2.15.RELEASE"//4.2.2.RELEASE
+    ext.junitVersion = "4.12"
+    ext.servletVersion = "3.1.0"
+    ext.tilesVersion = "3.0.1"
+    ext.poiVersion = "3.0.2-FINAL"
+    ext.jackson = "2.2.3"
+    ext.mybatis = "3.3.0"
+    //apache commons
+    ext.commonsio = "2.4"
+    ext.commonslang3 = "3.3.2"
+    ext.commonscodec = "1.9"
+    ext.commonslogging = "1.2"
+    ext.commonsfileupload = "1.3.1"
+    ext.commonsbeanutls = "1.9.2"
+    ext.aspectjrt = "1.7.4"
+    ext.aspectjweaver = "1.8.5"
+    ext.cglib = "3.1"
+    ext.mybatisspring = "1.2.2"
+    ext.druid = "1.0.12"
+    ext.ehcachecore = "2.6.9"
+    ext.ehcacheweb = "2.0.4"
+    ext.shiro = "1.2.3"
+    ext.taglibs = "1.1.2"
+
+    ext.gradleScriptDir = "${rootProject.projectDir}/gradle"
+
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+    repositories {
+        mavenLocal()
+        jcenter()
+        maven { url "http://repo.maven.apache.org/maven2" }
+    }
+
+    dependencies {
+        testCompile "junit:junit:${junitVersion}"
+    }
+}
+
+
+project(':bean') {
+    description = 'spring3 源码学习'
+
+    dependencies {
+        compile "org.springframework:spring-context:${springVersion}"
+        compile "org.springframework:spring-context-support:${springVersion}"
+        compile "org.springframework:spring-jdbc:${springVersion}"
+        compile "org.springframework:spring-orm:${springVersion}"
+        compile "org.springframework:spring-tx:${springVersion}"
+        //spring mvc
+//        compile "org.springframework:spring-web:${springVersion}"
+//        compile "org.springframework:spring-webmvc:${springVersion}"
+
+        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
+        // aop
+        compile "org.aspectj:aspectjrt:1.7.4"
+        compile "org.aspectj:aspectjweaver:1.8.5"
+        compile "cglib:cglib:3.1"
+        compile "org.springframework:spring-aop:3.2.15.RELEASE"
+
+        // spring boot
+        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
+        compile 'org.springframework.batch:spring-batch-core:3.0.7.RELEASE'
+
+        compile "mysql:mysql-connector-java:5.1.34"
+        compile "org.hsqldb:hsqldb:2.3.3"
+        compile 'com.h2database:h2:1.4.187'
+        compile "commons-dbcp:commons-dbcp:1.3"
+        compile "c3p0:c3p0:0.9.1.2"
+
+        compile "mysql:mysql-connector-java:5.1.34"
+
+        testCompile "org.springframework:spring-test:3.2.15.RELEASE"
+        testCompile("org.springframework.boot:spring-boot-starter-test:1.3.6.RELEASE")
+//        compile "junit:junit:${junitVersion}"
+
+    }
+}
+
+
+project(':web') {
+    description = 'spring3 源码学习'
+    apply plugin: "war"
+    dependencies {
+        compile "org.springframework:spring-context:${springVersion}"
+        compile "org.springframework:spring-context-support:${springVersion}"
+        compile "org.springframework:spring-jdbc:${springVersion}"
+        compile "org.springframework:spring-orm:${springVersion}"
+        compile "org.springframework:spring-tx:${springVersion}"
+        //spring mvc
+//        compile "org.springframework:spring-web:${springVersion}"
+//        compile "org.springframework:spring-webmvc:${springVersion}"
+
+        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
+        // aop
+        compile "org.aspectj:aspectjrt:1.7.4"
+        compile "org.aspectj:aspectjweaver:1.8.5"
+        compile "cglib:cglib:3.1"
+        compile "org.springframework:spring-aop:3.2.15.RELEASE"
+
+
+        compile "mysql:mysql-connector-java:5.1.34"
+        compile "org.hsqldb:hsqldb:2.3.3"
+        compile 'com.h2database:h2:1.4.187'
+        compile "commons-dbcp:commons-dbcp:1.3"
+        compile "c3p0:c3p0:0.9.1.2"
+
+        compile "mysql:mysql-connector-java:5.1.34"
+
+        testCompile "org.springframework:spring-test:3.2.15.RELEASE"
+        testCompile("org.springframework.boot:spring-boot-starter-test:1.3.6.RELEASE")
+
+    }
+}
+
+
+project(':boot') {
+    description = 'spring3 源码学习'
+
+    dependencies {
+        compile "org.springframework:spring-context:${springVersion}"
+        compile "org.springframework:spring-context-support:${springVersion}"
+        compile "org.springframework:spring-jdbc:${springVersion}"
+        compile "org.springframework:spring-orm:${springVersion}"
+        compile "org.springframework:spring-tx:${springVersion}"
+        //spring mvc
+//        compile "org.springframework:spring-web:${springVersion}"
+//        compile "org.springframework:spring-webmvc:${springVersion}"
+
+        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
+        // aop
+        compile "org.aspectj:aspectjrt:1.7.4"
+        compile "org.aspectj:aspectjweaver:1.8.5"
+        compile "cglib:cglib:3.1"
+        compile "org.springframework:spring-aop:3.2.15.RELEASE"
+
+        // spring boot
+        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
+        compile 'org.springframework.batch:spring-batch-core:3.0.7.RELEASE'
+
+        // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
+        compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.1'
+        // https://mvnrepository.com/artifact/commons-collections/commons-collections
+        compile group: 'commons-collections', name: 'commons-collections', version: '3.2.1'
+
+        compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.5.3"
+        compile "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
+
+        testCompile "org.springframework:spring-test:3.2.15.RELEASE"
+        testCompile("org.springframework.boot:spring-boot-starter-test:1.3.6.RELEASE")
+
+    }
 }
