--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,4 @@
 allprojects {
-    apply plugin: 'maven'
-    apply plugin: 'idea'
-
     group = 'me.spring.learn'
     version = '0.0.1-SNAPSHOT'
 }
@@ -50,9 +47,15 @@ subprojects {
     }
 }
 
+project(':batch') {
+    dependencies {
+        compile project(":bean")
+        compile 'org.springframework.batch:spring-batch-core:3.0.7.RELEASE'
+    }
+}
 
 project(':bean') {
-    description = 'spring3 源码学习'
+    description = 'spring 源码学习'
 
     dependencies {
         compile "org.springframework:spring-context:${springVersion}"
@@ -60,20 +63,12 @@ project(':bean') {
         compile "org.springframework:spring-jdbc:${springVersion}"
         compile "org.springframework:spring-orm:${springVersion}"
         compile "org.springframework:spring-tx:${springVersion}"
-        //spring mvc
-//        compile "org.springframework:spring-web:${springVersion}"
-//        compile "org.springframework:spring-webmvc:${springVersion}"
 
-        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
         // aop
         compile "org.aspectj:aspectjrt:1.7.4"
         compile "org.aspectj:aspectjweaver:1.8.5"
         compile "cglib:cglib:3.1"
         compile "org.springframework:spring-aop:3.2.15.RELEASE"
-
-        // spring boot
-        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
-        compile 'org.springframework.batch:spring-batch-core:3.0.7.RELEASE'
 
         compile "mysql:mysql-connector-java:5.1.34"
         compile "org.hsqldb:hsqldb:2.3.3"
@@ -83,9 +78,7 @@ project(':bean') {
 
         compile "mysql:mysql-connector-java:5.1.34"
 
-        testCompile "org.springframework:spring-test:3.2.15.RELEASE"
-        testCompile("org.springframework.boot:spring-boot-starter-test:1.3.6.RELEASE")
-//        compile "junit:junit:${junitVersion}"
+        testCompile "org.springframework:spring-test:${springVersion}"
 
     }
 }
@@ -95,6 +88,7 @@ project(':web') {
     description = 'spring3 源码学习'
     apply plugin: "war"
     dependencies {
+        compile project(":bean")
         compile "org.springframework:spring-context:${springVersion}"
         compile "org.springframework:spring-context-support:${springVersion}"
         compile "org.springframework:spring-jdbc:${springVersion}"
@@ -120,9 +114,6 @@ project(':web') {
 
         compile "mysql:mysql-connector-java:5.1.34"
 
-        testCompile "org.springframework:spring-test:3.2.15.RELEASE"
-        testCompile("org.springframework.boot:spring-boot-starter-test:1.3.6.RELEASE")
-
     }
 }
 
@@ -131,14 +122,7 @@ project(':boot') {
     description = 'spring3 源码学习'
 
     dependencies {
-        compile "org.springframework:spring-context:${springVersion}"
-        compile "org.springframework:spring-context-support:${springVersion}"
-        compile "org.springframework:spring-jdbc:${springVersion}"
-        compile "org.springframework:spring-orm:${springVersion}"
-        compile "org.springframework:spring-tx:${springVersion}"
-        //spring mvc
-//        compile "org.springframework:spring-web:${springVersion}"
-//        compile "org.springframework:spring-webmvc:${springVersion}"
+        compile project(":bean")
 
         compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
         // aop
@@ -149,7 +133,6 @@ project(':boot') {
 
         // spring boot
         compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
-        compile 'org.springframework.batch:spring-batch-core:3.0.7.RELEASE'
 
         // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
         compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.1'
@@ -159,7 +142,6 @@ project(':boot') {
         compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.5.3"
         compile "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
 
-        testCompile "org.springframework:spring-test:3.2.15.RELEASE"
         testCompile("org.springframework.boot:spring-boot-starter-test:1.3.6.RELEASE")
 
     }
