--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ allprojects {
 
 subprojects {
 
-    ext.springVersion = "3.2.15.RELEASE"//4.2.2.RELEASE
+    ext.springVersion = "4.2.2.RELEASE"//3.2.15.RELEASE
     ext.junitVersion = "4.12"
     ext.servletVersion = "3.1.0"
     ext.tilesVersion = "3.0.1"
@@ -50,6 +50,7 @@ subprojects {
 project(':batch') {
     dependencies {
         compile project(":bean")
+        compile project(":boot")
         compile 'org.springframework.batch:spring-batch-core:3.0.7.RELEASE'
     }
 }
@@ -58,6 +59,7 @@ project(':bean') {
     description = 'spring 源码学习'
 
     dependencies {
+        compile "org.springframework:spring-core:${springVersion}"
         compile "org.springframework:spring-context:${springVersion}"
         compile "org.springframework:spring-context-support:${springVersion}"
         compile "org.springframework:spring-jdbc:${springVersion}"
@@ -123,16 +125,15 @@ project(':boot') {
 
     dependencies {
         compile project(":bean")
-
-        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
-        // aop
-        compile "org.aspectj:aspectjrt:1.7.4"
-        compile "org.aspectj:aspectjweaver:1.8.5"
-        compile "cglib:cglib:3.1"
-        compile "org.springframework:spring-aop:3.2.15.RELEASE"
+//        compile "org.springframework:spring-core:${springVersion}"
+//        compile "org.springframework:spring-context:${springVersion}"
+//        compile "org.springframework:spring-context-support:${springVersion}"
+//        compile "org.springframework:spring-jdbc:${springVersion}"
+//        compile "org.springframework:spring-orm:${springVersion}"
+//        compile "org.springframework:spring-tx:${springVersion}"
 
         // spring boot
-        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
+        compile("org.springframework.boot:spring-boot-starter-web:1.2.7.RELEASE")
 
         // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
         compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.1'
