--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,9 @@ project(':bean') {
 
         compile "mysql:mysql-connector-java:5.1.34"
 
+        // protobuf
+        compile "com.google.protobuf:protobuf-java:2.6.1"
+        // test lib
         testCompile "org.springframework:spring-test:${springVersion}"
 
     }
