add protobuf junit

--- a/build.gradle
+++ b/build.gradle
@@ -103,7 +103,7 @@ project(':web') {
 //        compile "org.springframework:spring-web:${springVersion}"
 //        compile "org.springframework:spring-webmvc:${springVersion}"
 
-        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
+//        compile("org.springframework.boot:spring-boot-starter-web:1.3.6.RELEASE")
         // aop
         compile "org.aspectj:aspectjrt:1.7.4"
         compile "org.aspectj:aspectjweaver:1.8.5"
@@ -135,6 +135,7 @@ project(':boot') {
 //        compile "org.springframework:spring-orm:${springVersion}"
 //        compile "org.springframework:spring-tx:${springVersion}"
 
+        compile "org.springframework:spring-web:${springVersion}"
         // spring boot
         compile("org.springframework.boot:spring-boot-starter-web:1.2.7.RELEASE")
 
